--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "homepage": "https://karlozpo.github.io/Workshop/",
   "dependencies": {
     "body": "^5.1.0",
     "body-parser": "^1.19.0",
+    "err": "^2.1.11",
     "express": "^4.17.1",
+    "gh-pages": "^2.2.0",
     "nodemon": "^2.0.3",
     "parser": "^0.1.4",
     "sweetalert2": "^9.10.12"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d public"
   },
   "keywords": [],
   "author": "",
